# begleit-app-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.agent/rules/: global.md
.agent/skills/server/: SKILL.md
.agent/workflows/: configure-github-repo.md  onboarding.md
.github/: dependabot.yml
.github/workflows/: pull-request.yml
docs/: implementation-details.md
proto/: management.proto  translations.proto
src/: auth.rs  lib.rs  macros.rs  main.rs  management.rs  translations.rs
tests/: auth_api_test.rs  management_api_test.rs  open_api_test.rs  translations_api_test.rs
