[package]
name = "diwop-begleitapp"
version = "0.1.0"
edition = "2021"

[profile.release-check]
inherits = "release"
opt-level = 0

[dependencies]
axum = "0.7.5"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.5", features = ["trace"] }
tonic = "0.12"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
serde_json = "1.0"
tekken-rs = "0.1.1"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
