[package]
name = "diwop-begleitapp"
version = "0.1.0"
edition = "2021"

[profile.release-check]
inherits = "release"
opt-level = 0

[dependencies]
axum = "0.8"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.6", features = ["trace"] }
tonic = { version = "0.14", features = ["router"] }
prost = "0.14"
serde = { version = "1.0", features = ["derive"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
serde_json = "1.0"
tekken-rs = "0.1.1"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31" }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "metrics", "trace"] }
tracing-opentelemetry = "0.32"
tonic-build = "0.14"
utoipa = "5"
tonic-prost = "0.14.5"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
reqwest = { version = "0.13", features = ["json"] }
serde_json = "1.0"
